<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="45dp"
            android:layout_marginStart="10dp"
            android:layout_height="60dp"
            android:importantForAccessibility="no"
            android:src="@drawable/minicar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sawari"
            android:textColor="@color/red"
            android:layout_marginStart="70dp"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"/>


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/help"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/helpdesk" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:text="@string/enter_your_number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/enter_your_number_to_proceed"/>

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="88dp"
            android:layout_marginStart="70dp"
            android:text="@string/_91"/>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:autofillHints="no"
            android:inputType="phone"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginStart="100dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/_00000_00000"/>
    </RelativeLayout>

    <Button
        android:layout_width="356dp"
        android:layout_height="64dp"
        android:textSize="20sp"
        android:id="@+id/buttonNext"
        android:layout_marginTop="400dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        android:textColor="@color/white" />
</LinearLayout>